refactor: переработать в связи с вынесением Shift(Direction) в отдельный класс